[package]
name = "root"
version = "1.0.0"
authors = ["app"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
tokio = "0.2"
actix-web = "3.3.2"
actix-rt = "1.1"
envy = "0.3.3"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.64"
env_logger = "0.8.3"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.9", features = ["json", "blocking"] }
futures = "0.3.15"
diesel = { version = "1.4.6", features = ["postgres", "chrono", "network-address"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rusoto_core = "0.43"
rusoto_s3 = "0.43"
async-trait = "0.1.50"
base64 = "0.13.0"
actix-cors = "0.5.4"
influxdb = { version = "0.4.0", features = ["derive"] }

[profile.release]
panic = "abort"
